k8s/servicemonitor.yaml
apiVersion: v1
kind: Service
metadata:
  name: payment-api-metrics
  labels:
    app: payment-api
    metrics: "true"
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http-metrics
  selector:
    app: payment-api
