k8s/sqlserver-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mssql-service
  namespace: default
spec:
  selector:
    app: mssql
  ports:
  - protocol: TCP
    port: 1433
    targetPort: 1433
    name: mssql
  type: ClusterIP
